Closed
Bug 830295
Opened 11 years ago
Closed 11 years ago
Custom linker segfault handler keeps references to library handles
Categories
(Core :: mozglue, defect)
Tracking
()
RESOLVED
FIXED
mozilla21
People
(Reporter: glandium, Assigned: glandium)
References
Details
Attachments
(1 file)
The segfault handler used for on-demand decompression gets a handle for the library, with the intent of not touching the refcounter but ends up increasing it, and never decreasing it. So in the end, libxul.so has > 1500 "references".
Assignee | ||
Comment 1•11 years ago
|
||
Attachment #701747 -
Flags: review?(nfroyd)
![]() |
||
Updated•11 years ago
|
Attachment #701747 -
Flags: review?(nfroyd) → review+
Assignee | ||
Comment 2•11 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/136b90350752
Comment 3•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/136b90350752
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in
before you can comment on or make changes to this bug.
Description
•